src/test/ui/issues/issue-5216.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-5216.rs:3:19
   |
LL | pub static C: S = S(f);
   |                   ^^-^
   |                     |
   |                     expected `Box<(dyn FnMut() + 'static)>`, found `fn() {f}`
   |
note: tuple struct defined here
  --> $DIR/issue-5216.rs:2:1
   |
LL | struct S(Box<dyn FnMut()>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL | pub static C: S = struct S(Box<dyn FnMut()>);({Box<(dyn FnMut() + 'static)>});
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-5216.rs:8:19
   |
LL | pub static D: T = g;
   |                   ^ expected struct `Box`, found fn item
   |
   = note: expected struct `Box<(dyn FnMut() + 'static)>`
             found fn item `fn() {g}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
